--- a/src/pages/Dashboard/sidebar/styles.module.css
+++ b/src/pages/Dashboard/sidebar/styles.module.css
@@ -1,10 +1,14 @@
 .sidebar_section {
   background: var(--title-text-color);
   padding: 30px;
-  min-height: 110vh;
+  min-height: 80vh;
   width: 20%;
-
-  /* position: fixed; */
+}
+.items_container {
+  min-height: 110vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .business_logo {
